--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -135,6 +135,24 @@
                     </a>
                 </div>
             </li> -->
+            <div class="row">
+                <div class="col-xl-4 col-lg-6">
+                    <!-- <mat-card class="example-card"> -->
+
+                        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" style=" height: 109%;
+                        width: 100%;">
+
+                        <!-- <mat-card-content>
+                            <p>
+                                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+                                Japan.
+
+                            </p>
+                        </mat-card-content> -->
+
+                    <!-- </mat-card> -->
+                </div>
+            </div>
         </ul>
     </div>
 </nav>
