--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -1,8 +1,27 @@
 .example-card {
     max-width: 400px;
+    height: 100%;
+    background-color: white;
   }
 
   .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
+  }
+  .carousel-item {
+    /* Force to always be block */
+    display: block !important;
+    z-index: 1;
+    position: absolute;
+    transform: translateX(100%);
+    opacity: 0;
+    transition:all  0.2s;
+    visibility: hidden;
+  }
+
+  .carousel-item.active {
+    position: relative;
+    transform: translateX(0);
+    visibility: visible ;
+    opacity: 1;
   }
